--- a/src/app/components/canvas/canvas.component.html
+++ b/src/app/components/canvas/canvas.component.html
@@ -104,6 +104,7 @@
         <div class="grid gap-y-3 pl-4">
           <a
             href="#"
+            (click)="toggleMenu()"
             routerLink="/canvas"
             class="text-base font-semibold text-lg text-white transition duration-300 hover:text-gray-400"
           >
@@ -412,7 +413,7 @@
       <!---------------------------------------------- Modal ---------------------------------------------->
       <div *ngIf="modal" class="fixed z-10 inset-0 overflow-y-auto">
         <div
-          class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0"
+          class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0"
         >
           <div class="fixed inset-0 transition-opacity" aria-hidden="true">
             <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
@@ -428,7 +429,7 @@
             aria-modal="true"
             aria-labelledby="modal-headline"
           >
-            <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+            <div class="bg-white px-4 pt-3 pb-4 sm:p-6 sm:pb-4">
               <div class="sm:flex sm:items-start">
                 <div class="mt-3 text-center sm:mt-0 sm:text-left w-full">
                   <h3
@@ -514,20 +515,20 @@
   <footer
     class="relative flex flex-col items-center justify-between gap-2 p-6 text-white bg-pencil-500"
   >
-    <div class="flex sm:gap-4">
+    <div class="flex">
       <a
-        class="mr-1 sm:mr-0 text-white transition duration-300 hover:opacity-80 flex items-center gap-2"
+        class="mr-1 sm:mr-3 text-white transition duration-300 hover:opacity-80 flex items-center gap-1"
         href="https://github.com/justin-chu/pencil-learning"
       >
         <img
-          class="h-5 w-5 hidden sm:block"
+          class="h-5 w-5 mr-1 hidden sm:block"
           src="https://rajlab.org/icons/github_white.png"
         />GitHub</a
       >•<a
-        class="mx-1 sm:mx-0 text-white transition duration-300 hover:opacity-80 flex items-center gap-2"
+        class="mx-1 sm:mx-3 text-white transition duration-300 hover:opacity-80 flex items-center"
         href="https://www.justinchu.tech/"
         ><svg
-          class="h-5 w-5 hidden sm:block"
+          class="h-5 w-5 mr-1 hidden sm:block"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 20 20"
           fill="currentColor"
@@ -540,10 +541,10 @@
         </svg>
         Portfolio</a
       >•<a
-        class="ml-1 sm:ml-0 text-white transition duration-300 hover:opacity-80 flex items-center gap-2"
+        class="ml-1 sm:ml-3 text-white transition duration-300 hover:opacity-80 flex items-center"
         href="https://www.linkedin.com/in/justinchu252/"
         ><img
-          class="h-4 w-4 mb-0.5 mr-0.5 hidden sm:block"
+          class="h-4 w-4 mb-0.5 mr-1.5 hidden sm:block"
           src="https://www.docibgroup.com/assets/linkedin-icon-white.svg"
         />LinkedIn</a
       >
