--- a/src/app/components/canvas/canvas.component.html
+++ b/src/app/components/canvas/canvas.component.html
@@ -403,7 +403,7 @@
             width - 120 > 1400 ? 1400 : width >= 1024 ? width - 120 : width - 30
           "
           [style.height.px]="600"
-          class="bg-gray-400"
+          [ngStyle]="{ 'background-color': '#ededed' }"
         ></div>
       </div>
 
@@ -429,7 +429,7 @@
             aria-modal="true"
             aria-labelledby="modal-headline"
           >
-            <div class="bg-white px-4 pt-3 pb-4 sm:p-6 sm:pb-4">
+            <div class="bg-white px-4 pt-3 pb-4 sm:px-6 sm:pt-8 sm:pb-0">
               <div class="sm:flex sm:items-start">
                 <div class="mt-3 text-center sm:mt-0 sm:text-left w-full">
                   <h3
@@ -438,7 +438,7 @@
                   >
                     Load a shared canvas:
                   </h3>
-                  <div class="mt-2 w-full">
+                  <div class="mt-4 w-full">
                     <p
                       *ngIf="
                         sharedCanvases?.length == 0 ||
@@ -481,7 +481,7 @@
               </div>
             </div>
             <div
-              class="bg-gray-50 px-4 py-3 mb-3 sm:px-6 sm:flex sm:flex-row-reverse"
+              class="bg-gray-50 px-4 pt-1 pb-5 mb-3 sm:px-6 sm:pt-4 sm:flex sm:flex-row-reverse"
             >
               <button
                 (click)="loadSharedCanvas()"
